[package]
name = "scriv"
version = "0.1.0"
authors = ["Michael Mason <TeaUponTweed@gmail.com>"]

[dependencies]
sdl2-sys = "*"
ggez = { git = "https://github.com/ggez/ggez.git" }
rand = "*"
sdl2 = "*"
froggy = "*"
rayon = "*"
nalgebra = "0.13.0"
clippy = {version = "*", optional = true}

[features]
# If this feature is enabled, it will add <cargo root dir>/resources/ to
# the resource search path.
cargo-resource-root = []
